tests/bad/02_missing_brace.src
# Test: Missing parentheses
void main([string] args) {
    return 42;
# Missing closing brace
